src/objects/ContractAppSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Previous_Contract_Field_ID__c</fullName>
        <inlineHelpText>Used to manage the ID to the Previous Contract field in a central location</inlineHelpText>
        <label>Previous Contract Field ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Contract_Field_LK_ID__c</fullName>
        <inlineHelpText>Used in URLs to manage the actual ID of the contract being renewed</inlineHelpText>
        <label>Previous Contract Field LK ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeID__c</fullName>
        <inlineHelpText>Used in URLs to pass the ID of the &apos;Type of contract&apos; field</inlineHelpText>
        <label>TypeID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contract App Settings</label>
</CustomObject>